--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <!-- Codrops top bar -->
             <header>
-                <h1>Animated 3D Bar Chart <span>with CSS3</span> </h1>
+                <h1>Animated 3D Bar Chart <span>with CSS3</span> Committed to Github by Devello Studio </h1>
 				<h2 class="ie-note ie-note-1">Please view this in a modern browser.</h2>
 				<h2 class="ie-note ie-note-2">CSS3 Transitions don't work in Internet Explorer &lt; 10</h2>
             </header>
